# job-agent

./: README.md
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  render.yaml  task.md
backend/app/: main.py
backend/app/agents/: application_agent.py  jd_analysis_agent.py  job_search_agent.py  pipeline.py  resume_agent.py
backend/app/api/: routes.py
backend/app/core/: config.py  prompts.py
backend/app/db/: session.py
backend/app/models/: models.py
backend/app/schemas/: job_schema.py
backend/app/services/: browser_service.py  email_service.py  llm_service.py  redis_service.py  resume_service.py  scheduler_service.py  scraper_service.py
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: JobCard.tsx  PipelineControls.tsx
frontend/src/lib/: api.ts
