[project]
name = "Job_Agent_Backend"
version = "0.1.0"
description = "This is the AI agent that will be responsible for finding and applying to the relevent job"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.1",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.0.10",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "pdfplumber>=0.11.9",
    "playwright>=1.58.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "redis>=7.2.1",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.48",
    "typer>=0.24.1",
    "upstash-redis>=1.6.0",
    "uvicorn>=0.41.0",
]

